--- a/style.css
+++ b/style.css
@@ -849,5 +849,55 @@ footer {
             }
         }
     }
+
+
+    /*====================== 
+        Footer
+      ======================*/
+    footer{
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        >h1{
+            font: var(--text-preset2);
+        }
+
+       
+    } 
+
+    .footer-cta{
+        a{
+            width: 60%;
+            margin: auto;
+            margin-top: var(--spacing-500);
+            font: var(--text-preset6);
+        }
+    }
+
+    .testimonials-container {
+        margin-top: var(--spacing-250);
+        margin-left: 27px;
+        
+        .testimonials-image {
+            justify-self: end;
+            width: 50%;
+        }
+    }
+
+    .stars-container {
+        >img {
+            width: 6%;
+        }
+    }
+
+    .copy-footer{
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        padding: var(--spacing-250) var(--spacing-400);
+    }
 }
 
